--- a/index.html
+++ b/index.html
@@ -1,142 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress Bar Widget</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 50px;
-      }
-      .progress-container {
-        width: 80%;
-        background-color: #eee;
-        border-radius: 25px;
-        margin: 20px auto;
-        height: 30px;
-      }
-      .progress-bar {
-        width: 0%;
-        height: 30px;
-        border-radius: 25px;
-        line-height: 30px;
-        color: white;
-        font-weight: bold;
-        text-align: center;
-        transition: width 0.5s, background-color 0.5s;
-      }
-      input {
-        padding: 5px;
-        width: 120px;
-        margin: 5px;
-      }
-      button {
-        padding: 5px 10px;
-        margin: 5px;
-      }
-    </style>
-  </head>
-  <body>
-    <h2 id="widget-title">Travel Incentive Progress</h2>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Progress Bar Widget</title>
+<style>
+  body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+  .progress-container { width: 80%; background-color: #eee; border-radius: 25px; margin: 20px auto; height: 30px; }
+  .progress-bar { width: 0%; height: 30px; border-radius: 25px; line-height: 30px; color: white; font-weight: bold; text-align: center; transition: width 0.5s, background-color 0.5s; }
+  input { padding: 5px; width: 120px; margin: 5px; }
+  button { padding: 5px 10px; margin: 5px; }
+</style>
+</head>
+<body>
 
-    <label>Widget Title:</label>
-    <input type="text" id="titleInput" placeholder="Enter title" />
-    <button onclick="updateTitle()">Set Title</button>
+<h2 id="widget-title">Loading...</h2>
 
-    <br /><br />
+<label>Update Current:</label>
+<input type="number" id="currentInput" placeholder="Enter current value" />
+<button onclick="updateProgress()">Update</button>
+<button onclick="resetProgress()">Reset</button>
 
-    <label>Set Goal:</label>
-    <input type="number" id="goalInput" placeholder="Enter goal" />
-    <button onclick="setGoal()">Set Goal</button>
+<div class="progress-container">
+  <div class="progress-bar" id="progress-bar">0%</div>
+</div>
 
-    <br /><br />
+<p id="progress-text">Goal: - | Current: 0</p>
 
-    <label>Update Current:</label>
-    <input type="number" id="currentInput" placeholder="Enter current value" />
-    <button onclick="updateProgress()">Update</button>
-    <button onclick="resetProgress()">Reset</button>
+<script>
+const API_URL = "https://sheetdb.io/api/v1/r0g4ot5dg5gk0";
+let goal = 0;
+let current = 0;
+let rowId = 1; // Usually first row, change if needed
 
-    <div class="progress-container">
-      <div class="progress-bar" id="progress-bar">0%</div>
-    </div>
+// Load data from SheetDB
+async function loadData() {
+  try {
+    const res = await fetch(API_URL);
+    const data = await res.json();
+    const row = data[0]; // assuming first row
+    document.getElementById('widget-title').textContent = row.Title;
+    goal = parseFloat(row.Goal);
+    current = parseFloat(row.Current);
+    updateProgressBar();
+  } catch (err) {
+    console.error(err);
+  }
+}
 
-    <p id="progress-text">Goal: - | Current: 0</p>
+// Update progress bar UI
+function updateProgressBar() {
+  const progressPercent = Math.min((current / goal) * 100, 100);
+  const progressBar = document.getElementById("progress-bar");
+  progressBar.style.width = progressPercent + "%";
 
-    <script>
-      let goal = null;
-      let current = 0;
+  const red = Math.max(255 - Math.floor(2.55 * progressPercent), 0);
+  const green = Math.min(Math.floor(2.55 * progressPercent), 255);
+  progressBar.style.backgroundColor = `rgb(${red},${green},0)`;
 
-      // Update widget title
-      function updateTitle() {
-        const title = document.getElementById("titleInput").value.trim();
-        if (title) {
-          document.getElementById("widget-title").textContent = title;
-          document.getElementById("titleInput").value = "";
-        }
-      }
+  progressBar.textContent = Math.floor(progressPercent) + "%";
+  document.getElementById('progress-text').textContent = `Goal: ${goal} | Current: ${current}`;
+}
 
-      // Set goal
-      function setGoal() {
-        const goalVal = parseFloat(document.getElementById("goalInput").value);
-        if (!isNaN(goalVal) && goalVal > 0) {
-          goal = goalVal;
-          document.getElementById("goalInput").disabled = true;
-          document.getElementById("goalInput").value = "";
-          updateProgress();
-        } else {
-          alert("Please enter a valid goal.");
-        }
-      }
+// Update Current value in SheetDB
+async function updateProgress() {
+  const newCurrent = parseFloat(document.getElementById('currentInput').value);
+  if (!isNaN(newCurrent) && newCurrent >= 0) {
+    current = newCurrent;
+    updateProgressBar();
+    document.getElementById('currentInput').value = '';
 
-      // Update progress
-      function updateProgress() {
-        if (!goal) {
-          alert("Please set a goal first.");
-          return;
-        }
+    try {
+      await fetch(`${API_URL}/row/${rowId}`, {
+        method: "PATCH",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ data: { Current: current } })
+      });
+    } catch (err) {
+      console.error(err);
+    }
+  } else {
+    alert("Please enter a valid number");
+  }
+}
 
-        const currentVal = parseFloat(
-          document.getElementById("currentInput").value
-        );
-        if (!isNaN(currentVal) && currentVal >= 0) {
-          current = currentVal;
-          document.getElementById("currentInput").value = "";
+// Reset progress
+async function resetProgress() {
+  current = 0;
+  updateProgressBar();
+  try {
+    await fetch(`${API_URL}/row/${rowId}`, {
+      method: "PATCH",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ data: { Current: current } })
+    });
+  } catch (err) {
+    console.error(err);
+  }
+}
 
-          const progressPercent = Math.min((current / goal) * 100, 100);
-          const progressBar = document.getElementById("progress-bar");
-          progressBar.style.width = progressPercent + "%";
+// Initialize
+loadData();
+</script>
 
-          // Solid color: red to green based on progress
-          const red = Math.max(255 - Math.floor(2.55 * progressPercent), 0);
-          const green = Math.min(Math.floor(2.55 * progressPercent), 255);
-          progressBar.style.backgroundColor = `rgb(${red},${green},0)`;
-
-          progressBar.textContent = Math.floor(progressPercent) + "%";
-          document.getElementById(
-            "progress-text"
-          ).textContent = `Goal: ${goal} | Current: ${current}`;
-        } else {
-          alert("Please enter a valid current value.");
-        }
-      }
-
-      // Reset everything
-      function resetProgress() {
-        goal = null;
-        current = 0;
-        document.getElementById("goalInput").disabled = false;
-        document.getElementById("goalInput").value = "";
-        document.getElementById("currentInput").value = "";
-        document.getElementById("widget-title").textContent =
-          "Travel Incentive Progress";
-        document.getElementById("progress-bar").style.width = "0%";
-        document.getElementById("progress-bar").style.backgroundColor = "red";
-        document.getElementById("progress-bar").textContent = "0%";
-        document.getElementById("progress-text").textContent =
-          "Goal: - | Current: 0";
-      }
-    </script>
-  </body>
+</body>
 </html>
