--- a/index.html
+++ b/index.html
@@ -14,43 +14,130 @@
 </head>
 <body>
 
-<h2 id="widget-title">Loading...</h2>
+<h2 id="widget-title"></h2>
+
+<label>Set Title:</label>
+<input type="text" id="titleInput" placeholder="Enter title" />
+<button onclick="setTitle()">Set Title</button>
+
+<br><br>
+
+<label>Set Goal:</label>
+<input type="number" id="goalInput" placeholder="Enter goal" />
+<button onclick="setGoal()">Set Goal</button>
+
+<br><br>
 
 <label>Update Current:</label>
 <input type="number" id="currentInput" placeholder="Enter current value" />
-<button onclick="updateProgress()">Update</button>
-<button onclick="resetProgress()">Reset</button>
+<button onclick="updateCurrent()">Update</button>
+<button onclick="resetCurrent()">Reset Current</button>
 
 <div class="progress-container">
   <div class="progress-bar" id="progress-bar">0%</div>
 </div>
 
-<p id="progress-text">Goal: - | Current: 0</p>
+<p id="progress-text">Goal: 0 | Current: 0</p>
 
 <script>
 const API_URL = "https://sheetdb.io/api/v1/r0g4ot5dg5gk0";
 let goal = 0;
 let current = 0;
-let rowId = 1; // Usually first row, change if needed
+let title = "";
+let rowId = 1; // First row in your sheet
 
 // Load data from SheetDB
 async function loadData() {
   try {
     const res = await fetch(API_URL);
     const data = await res.json();
-    const row = data[0]; // assuming first row
-    document.getElementById('widget-title').textContent = row.Title;
-    goal = parseFloat(row.Goal);
-    current = parseFloat(row.Current);
+    const row = data[0];
+    title = row.Title || "";
+    goal = parseFloat(row.Goal) || 0;
+    current = parseFloat(row.Current) || 0;
+
+    document.getElementById('widget-title').textContent = title;
+    if(goal > 0) document.getElementById('goalInput').disabled = true;
     updateProgressBar();
   } catch (err) {
     console.error(err);
   }
 }
 
+// Set title
+async function setTitle() {
+  const newTitle = document.getElementById('titleInput').value.trim();
+  if(newTitle) {
+    title = newTitle;
+    document.getElementById('widget-title').textContent = title;
+    document.getElementById('titleInput').value = '';
+    try {
+      await fetch(`${API_URL}/row/${rowId}`, {
+        method: "PATCH",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ data: { Title: title } })
+      });
+    } catch(err) { console.error(err); }
+  } else {
+    alert("Please enter a title.");
+  }
+}
+
+// Set goal
+async function setGoal() {
+  const newGoal = parseFloat(document.getElementById('goalInput').value);
+  if(!isNaN(newGoal) && newGoal > 0) {
+    goal = newGoal;
+    document.getElementById('goalInput').disabled = true;
+    document.getElementById('goalInput').value = '';
+    updateProgressBar();
+    try {
+      await fetch(`${API_URL}/row/${rowId}`, {
+        method: "PATCH",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ data: { Goal: goal } })
+      });
+    } catch(err) { console.error(err); }
+  } else {
+    alert("Please enter a valid goal.");
+  }
+}
+
+// Update current value
+async function updateCurrent() {
+  const newCurrent = parseFloat(document.getElementById('currentInput').value);
+  if(!isNaN(newCurrent) && newCurrent >= 0) {
+    current = newCurrent;
+    document.getElementById('currentInput').value = '';
+    updateProgressBar();
+    try {
+      await fetch(`${API_URL}/row/${rowId}`, {
+        method: "PATCH",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ data: { Current: current } })
+      });
+    } catch(err) { console.error(err); }
+  } else {
+    alert("Please enter a valid number.");
+  }
+}
+
+// Reset current only
+async function resetCurrent() {
+  current = 0;
+  updateProgressBar();
+  try {
+    await fetch(`${API_URL}/row/${rowId}`, {
+      method: "PATCH",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ data: { Current: current } })
+    });
+  } catch(err) { console.error(err); }
+}
+
 // Update progress bar UI
 function updateProgressBar() {
-  const progressPercent = Math.min((current / goal) * 100, 100);
+  const progressPercent = goal > 0 ? Math.min((current / goal) * 100, 100) : 0;
   const progressBar = document.getElementById("progress-bar");
   progressBar.style.width = progressPercent + "%";
 
@@ -60,43 +147,6 @@ function updateProgressBar() {
 
   progressBar.textContent = Math.floor(progressPercent) + "%";
   document.getElementById('progress-text').textContent = `Goal: ${goal} | Current: ${current}`;
-}
-
-// Update Current value in SheetDB
-async function updateProgress() {
-  const newCurrent = parseFloat(document.getElementById('currentInput').value);
-  if (!isNaN(newCurrent) && newCurrent >= 0) {
-    current = newCurrent;
-    updateProgressBar();
-    document.getElementById('currentInput').value = '';
-
-    try {
-      await fetch(`${API_URL}/row/${rowId}`, {
-        method: "PATCH",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ data: { Current: current } })
-      });
-    } catch (err) {
-      console.error(err);
-    }
-  } else {
-    alert("Please enter a valid number");
-  }
-}
-
-// Reset progress
-async function resetProgress() {
-  current = 0;
-  updateProgressBar();
-  try {
-    await fetch(`${API_URL}/row/${rowId}`, {
-      method: "PATCH",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ data: { Current: current } })
-    });
-  } catch (err) {
-    console.error(err);
-  }
 }
 
 // Initialize
