--- a/index.html
+++ b/index.html
@@ -1,241 +1,322 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Progress Tracker Widget</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: var(--bg-color, transparent);
-    color: var(--text-color, #000);
-    transition: background-color 0.3s, color 0.3s;
-  }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Progress Tracker Widget</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        background-color: var(--bg-color, transparent);
+        color: var(--text-color, #000000);
+        font-family: var(--font-family, "Work Sans", sans-serif);
+        transition: background-color 0.3s, color 0.3s, font-family 0.3s;
+      }
 
-  /* Header with burger */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background: transparent;
-  }
-  .burger {
-    font-size: 24px;
-    cursor: pointer;
-    user-select: none;
-  }
+      /* Header */
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+      }
+      .burger {
+        font-size: 24px;
+        cursor: pointer;
+        user-select: none;
+      }
 
-  /* Sidebar menu */
-  .sidebar {
-    position: fixed;
-    top: 0;
-    right: -220px;
-    width: 200px;
-    height: 100%;
-    background: #f5f5f5;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.2);
-    transition: right 0.3s;
-    padding: 20px;
-    z-index: 1000;
-  }
-  .sidebar.open {
-    right: 0;
-  }
-  .sidebar label, .sidebar select, .sidebar input {
-    display: block;
-    margin: 10px 0;
-    width: 100%;
-  }
+      /* Sidebar */
+      .sidebar {
+        position: fixed;
+        top: 0;
+        right: -260px;
+        width: 250px;
+        height: 100%;
+        background: #f5f5f5;
+        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+        transition: right 0.3s;
+        padding: 20px;
+        z-index: 1000;
+      }
+      .sidebar.open {
+        right: 0;
+      }
+      .sidebar .closeBtn {
+        float: right;
+        cursor: pointer;
+        font-weight: bold;
+        font-size: 18px;
+        margin-top: -10px;
+        margin-right: -10px;
+      }
+      .sidebar label,
+      .sidebar select,
+      .sidebar input {
+        display: block;
+        margin: 10px 0;
+        width: 100%;
+      }
 
-  h2#widget-title {
-    margin-top: 20px;
-    font-size: 1.5rem;
-  }
+      h2#widget-title {
+        margin-top: 20px;
+        font-size: 1.5rem;
+      }
 
-  .progress-container {
-    width: 80%;
-    background-color: #eee;
-    border-radius: 25px;
-    margin: 20px auto;
-    height: 30px;
-  }
-  .progress-bar {
-    width: 0%;
-    height: 30px;
-    border-radius: 25px;
-    line-height: 30px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    transition: width 0.5s, background-color 0.5s;
-  }
+      .progress-container {
+        width: 80%;
+        background-color: #eee;
+        margin: 20px auto;
+        height: 30px;
+        border-radius: 25px;
+        overflow: hidden;
+        position: relative;
+      }
 
-  #progress-text {
-    margin: 10px 0;
-  }
+      .progress-bar {
+        width: 0%;
+        height: 100%;
+        line-height: 30px;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: width 0.5s, background-color 0.5s, border-radius 0.3s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-  #updateSection { display: none; } /* Notion-safe, hidden in Notion */
-</style>
-</head>
-<body>
+      #progress-text {
+        margin: 10px 0;
+      }
 
-<div class="header">
-  <span>Progress Tracker</span>
-  <span class="burger" onclick="toggleSidebar()">☰</span>
-</div>
+      #updateSection {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header">
+      <span>Progress Tracker</span>
+      <span class="burger" onclick="toggleSidebar()">☰</span>
+    </div>
 
-<!-- Sidebar menu -->
-<div class="sidebar" id="sidebar">
-  <h3>Settings</h3>
-  <label for="fontSelect">Font:</label>
-  <select id="fontSelect" onchange="changeFont()">
-    <option value="Arial">Arial</option>
-    <option value="Times New Roman">Times New Roman</option>
-    <option value="Courier New">Courier New</option>
-  </select>
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+      <span class="closeBtn" onclick="toggleSidebar()">×</span>
+      <h3>Settings</h3>
 
-  <label for="textColor">Text color:</label>
-  <input type="color" id="textColor" onchange="changeTextColor()">
+      <label for="fontSelect">Font:</label>
+      <select id="fontSelect" onchange="changeFont()">
+        <option value="'Work Sans', sans-serif">Work Sans</option>
+        <option value="serif">Serif</option>
+        <option value="monospace">Mono</option>
+      </select>
 
-  <label for="bgColor">Background:</label>
-  <input type="color" id="bgColor" onchange="changeBgColor()">
-</div>
+      <label for="textColor">Text color:</label>
+      <input type="color" id="textColor" onchange="changeTextColor()" />
 
-<h2 id="widget-title"></h2>
+      <label for="bgColor">Background:</label>
+      <input type="color" id="bgColor" onchange="changeBgColor()" />
 
-<div class="progress-container">
-  <div class="progress-bar" id="progress-bar">0%</div>
-</div>
+      <label for="barStyle">Bar style:</label>
+      <select id="barStyle" onchange="changeBarStyle()">
+        <option value="rounded">Rounded</option>
+        <option value="box">Box</option>
+      </select>
 
-<p id="progress-text">Goal: 0 | Current: 0</p>
+      <label for="barType">Bar type:</label>
+      <select id="barType" onchange="changeBarType()">
+        <option value="solid">Solid</option>
+        <option value="gradient">Gradient</option>
+      </select>
 
-<!-- Update section visible in browser only -->
-<div id="updateSection">
-  <label>Update Current:</label>
-  <input type="number" id="currentInput" placeholder="Enter current value" />
-  <button onclick="updateCurrent()">Update</button>
-  <button onclick="resetCurrent()">Reset Current</button>
-</div>
+      <label for="barColor1">Color 1:</label>
+      <input type="color" id="barColor1" onchange="changeBarColors()" />
+      <label for="barColor2">Color 2 (gradient):</label>
+      <input type="color" id="barColor2" onchange="changeBarColors()" />
+    </div>
 
-<script>
-const API_URL = "https://sheetdb.io/api/v1/r0g4ot5dg5gk0";
-let goal = 0;
-let current = 0;
-let title = "";
-let rowId = 1; // first row in sheet
+    <h2 id="widget-title"></h2>
 
-/* Sidebar toggle */
-function toggleSidebar() {
-  document.getElementById('sidebar').classList.toggle('open');
-}
+    <div class="progress-container">
+      <div class="progress-bar" id="progress-bar">0%</div>
+    </div>
 
-/* Style customization using localStorage */
-function loadStyles() {
-  const font = localStorage.getItem('trackerFont') || 'Arial';
-  const textColor = localStorage.getItem('trackerTextColor') || '#000000';
-  const bgColor = localStorage.getItem('trackerBgColor') || 'transparent';
-  document.body.style.fontFamily = font;
-  document.body.style.setProperty('--text-color', textColor);
-  document.body.style.setProperty('--bg-color', bgColor);
-  document.getElementById('fontSelect').value = font;
-  document.getElementById('textColor').value = textColor;
-  document.getElementById('bgColor').value = bgColor;
-}
-function changeFont() {
-  const font = document.getElementById('fontSelect').value;
-  document.body.style.fontFamily = font;
-  localStorage.setItem('trackerFont', font);
-}
-function changeTextColor() {
-  const color = document.getElementById('textColor').value;
-  document.body.style.setProperty('--text-color', color);
-  localStorage.setItem('trackerTextColor', color);
-}
-function changeBgColor() {
-  const color = document.getElementById('bgColor').value;
-  document.body.style.setProperty('--bg-color', color);
-  localStorage.setItem('trackerBgColor', color);
-}
+    <p id="progress-text">Goal: 0 | Current: 0</p>
 
-/* Detect if in Notion iframe */
-function inNotion() {
-  return window.location !== window.parent.location;
-}
+    <div id="updateSection">
+      <label>Update Current:</label>
+      <input
+        type="number"
+        id="currentInput"
+        placeholder="Enter current value"
+      />
+      <button onclick="updateCurrent()">Update</button>
+      <button onclick="resetCurrent()">Reset Current</button>
+    </div>
 
-/* Show update section only in browser */
-if(!inNotion()) {
-  document.getElementById('updateSection').style.display = "block";
-}
+    <script>
+      const API_URL = "https://sheetdb.io/api/v1/r0g4ot5dg5gk0";
+      let goal = 0;
+      let current = 0;
+      let title = "";
+      let rowId = 1;
 
-/* Load data from SheetDB */
-async function loadData() {
-  try {
-    const res = await fetch(API_URL);
-    const data = await res.json();
-    const row = data[0];
-    title = row.Title || "";
-    goal = parseFloat(row.Goal) || 0;
-    current = parseFloat(row.Current) || 0;
-    document.getElementById('widget-title').textContent = title;
-    updateProgressBar();
-  } catch(err) { console.error(err); }
-}
+      function inNotion() {
+        return window.location !== window.parent.location;
+      }
+      if (!inNotion()) {
+        document.getElementById("updateSection").style.display = "block";
+      }
 
-/* Update progress bar */
-function updateProgressBar() {
-  const progressPercent = goal > 0 ? Math.min((current / goal) * 100, 100) : 0;
-  const progressBar = document.getElementById("progress-bar");
-  progressBar.style.width = progressPercent + "%";
+      function toggleSidebar() {
+        document.getElementById("sidebar").classList.toggle("open");
+      }
 
-  // Rich green (not too light)
-  const red = Math.max(255 - Math.floor(2.55 * progressPercent), 0);
-  const green = Math.min(180 + Math.floor(0.75 * progressPercent), 180); // darker green
-  progressBar.style.backgroundColor = `rgb(${red},${green},0)`;
+      /* Style customization */
+      function loadStyles() {
+        const font =
+          localStorage.getItem("trackerFont") || "'Work Sans', sans-serif";
+        const textColor = localStorage.getItem("trackerTextColor") || "#000000";
+        const bgColor = localStorage.getItem("trackerBgColor") || "transparent";
+        const barStyle = localStorage.getItem("trackerBarStyle") || "rounded";
+        const barType = localStorage.getItem("trackerBarType") || "solid";
+        const barColor1 = localStorage.getItem("trackerBarColor1") || "#00aa00";
+        const barColor2 = localStorage.getItem("trackerBarColor2") || "#55ff55";
 
-  progressBar.textContent = Math.floor(progressPercent) + "%";
-  document.getElementById('progress-text').textContent = `Goal: ${goal} | Current: ${current}`;
-}
+        document.body.style.fontFamily = font;
+        document.body.style.setProperty("--text-color", textColor);
+        document.body.style.setProperty("--bg-color", bgColor);
+        document.getElementById("fontSelect").value = font;
+        document.getElementById("textColor").value = textColor;
+        document.getElementById("bgColor").value = bgColor;
+        document.getElementById("barStyle").value = barStyle;
+        document.getElementById("barType").value = barType;
+        document.getElementById("barColor1").value = barColor1;
+        document.getElementById("barColor2").value = barColor2;
 
-/* Update Current in browser */
-async function updateCurrent() {
-  const newCurrent = parseFloat(document.getElementById('currentInput').value);
-  if(!isNaN(newCurrent) && newCurrent >= 0) {
-    current = newCurrent;
-    document.getElementById('currentInput').value = '';
-    updateProgressBar();
-    try {
-      await fetch(`${API_URL}/row/${rowId}`, {
-        method: "PATCH",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ data: { Current: current } })
-      });
-    } catch(err) { console.error(err); }
-  } else {
-    alert("Please enter a valid number.");
-  }
-}
+        changeBarStyle();
+        changeBarColors();
+      }
+      function changeFont() {
+        const f = document.getElementById("fontSelect").value;
+        document.body.style.fontFamily = f;
+        localStorage.setItem("trackerFont", f);
+      }
+      function changeTextColor() {
+        const c = document.getElementById("textColor").value;
+        document.body.style.setProperty("--text-color", c);
+        localStorage.setItem("trackerTextColor", c);
+      }
+      function changeBgColor() {
+        const c = document.getElementById("bgColor").value;
+        document.body.style.setProperty("--bg-color", c);
+        localStorage.setItem("trackerBgColor", c);
+      }
+      function changeBarStyle() {
+        const style = document.getElementById("barStyle").value;
+        document.getElementById("progress-bar").style.borderRadius =
+          style === "rounded" ? "25px" : "0px";
+        localStorage.setItem("trackerBarStyle", style);
+      }
+      function changeBarType() {
+        const type = document.getElementById("barType").value;
+        localStorage.setItem("trackerBarType", type);
+        updateProgressBar();
+      }
+      function changeBarColors() {
+        const c1 = document.getElementById("barColor1").value;
+        const c2 = document.getElementById("barColor2").value;
+        localStorage.setItem("trackerBarColor1", c1);
+        localStorage.setItem("trackerBarColor2", c2);
+        updateProgressBar();
+      }
 
-/* Reset Current in browser */
-async function resetCurrent() {
-  current = 0;
-  updateProgressBar();
-  try {
-    await fetch(`${API_URL}/row/${rowId}`, {
-      method: "PATCH",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ data: { Current: current } })
-    });
-  } catch(err) { console.error(err); }
-}
+      /* Load data */
+      async function loadData() {
+        try {
+          const res = await fetch(API_URL);
+          const data = await res.json();
+          const row = data[0];
+          title = row.Title || "";
+          goal = parseFloat(row.Goal) || 0;
+          current = parseFloat(row.Current) || 0;
+          document.getElementById("widget-title").textContent = title;
+          updateProgressBar();
+        } catch (err) {
+          console.error(err);
+        }
+      }
 
-/* Initialize */
-loadStyles();
-loadData();
-setInterval(loadData, 300000); // refresh every 5 minutes for Notion
-</script>
-</body>
+      /* Update progress bar */
+      function updateProgressBar() {
+        const progressPercent =
+          goal > 0 ? Math.min((current / goal) * 100, 100) : 0;
+        const progressBar = document.getElementById("progress-bar");
+        progressBar.style.width = progressPercent + "%";
+        progressBar.textContent = Math.floor(progressPercent) + "%";
+
+        const type = localStorage.getItem("trackerBarType") || "solid";
+        const c1 = localStorage.getItem("trackerBarColor1") || "#00aa00";
+        const c2 = localStorage.getItem("trackerBarColor2") || "#55ff55";
+
+        if (type === "solid") {
+          progressBar.style.background = `${c1}`;
+        } else {
+          progressBar.style.background = `linear-gradient(to right, ${c1}, ${c2})`;
+        }
+
+        document.getElementById(
+          "progress-text"
+        ).textContent = `Goal: ${goal} | Current: ${current}`;
+      }
+
+      /* Update Current in browser */
+      async function updateCurrent() {
+        const newCurrent = parseFloat(
+          document.getElementById("currentInput").value
+        );
+        if (!isNaN(newCurrent) && newCurrent >= 0) {
+          current = newCurrent;
+          document.getElementById("currentInput").value = "";
+          updateProgressBar();
+          try {
+            await fetch(`${API_URL}/row/${rowId}`, {
+              method: "PATCH",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ data: { Current: current } }),
+            });
+          } catch (err) {
+            console.error(err);
+          }
+        } else alert("Please enter a valid number.");
+      }
+
+      /* Reset Current in browser */
+      async function resetCurrent() {
+        current = 0;
+        updateProgressBar();
+        try {
+          await fetch(`${API_URL}/row/${rowId}`, {
+            method: "PATCH",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ data: { Current: current } }),
+          });
+        } catch (err) {
+          console.error(err);
+        }
+      }
+
+      /* Initialize */
+      loadStyles();
+      loadData();
+      setInterval(loadData, 300000); // refresh every 5 min
+    </script>
+  </body>
 </html>
